# frugen

./: CMakeLists.txt  fru.c  fru.h  frugen.c
